be explicit with can-focus
We want to have a bit more control over how things focus and when. There is
still an issue with GTK where it does :focus on the notebook when the view
is focused, but that will be fixed elsewhere.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -107,6 +107,7 @@
     </child>
     <child>
       <object class="GtkPaned" id="paned">
+        <property name="can-focus">false</property>
         <property name="orientation">horizontal</property>
         <property name="position">250</property>
         <child>
@@ -116,6 +117,7 @@
         </child>
         <child>
           <object class="GtkStack" id="stack">
+            <property name="can-focus">false</property>
             <style>
               <class name="view"/>
             </style>
@@ -130,6 +132,7 @@
             </child>
             <child>
               <object class="GtkBox" id="empty">
+                <property name="can-focus">false</property>
                 <property name="hexpand">true</property>
                 <property name="vexpand">true</property>
                 <property name="halign">center</property>
@@ -141,6 +144,7 @@
                 <property name="margin-bottom">32</property>
                 <child>
                   <object class="GtkImage">
+                    <property name="can-focus">false</property>
                     <property name="icon-name">text-editor-symbolic</property>
                     <property name="pixel-size">128</property>
                     <property name="margin-bottom">16</property>
@@ -151,6 +155,7 @@
                 </child>
                 <child>
                   <object class="GtkLabel">
+                    <property name="can-focus">false</property>
                     <property name="label" translatable="yes">Start or Open a Document</property>
                     <property name="margin-bottom">16</property>
                     <style>
@@ -164,6 +169,7 @@
                 </child>
                 <child>
                   <object class="GtkLabel">
+                    <property name="can-focus">false</property>
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">• Use the open sidebar</property>
                     <property name="margin-bottom">6</property>
@@ -174,6 +180,7 @@
                 </child>
                 <child>
                   <object class="GtkLabel">
+                    <property name="can-focus">false</property>
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">• Press the new tab button</property>
                     <property name="margin-bottom">6</property>
@@ -184,6 +191,7 @@
                 </child>
                 <child>
                   <object class="GtkLabel">
+                    <property name="can-focus">false</property>
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">• Press Ctrl+N to start a new document</property>
                     <property name="margin-bottom">6</property>
@@ -194,6 +202,7 @@
                 </child>
                 <child>
                   <object class="GtkLabel">
+                    <property name="can-focus">false</property>
                     <property name="halign">start</property>
                     <property name="label" translatable="yes">• Press Ctrl+O to browse for a document</property>
                     <style>
