window: tweak alignment for empty state
We should really do this with a better SVG, but we can tweak it for now.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -147,7 +147,8 @@
                     <property name="can-focus">false</property>
                     <property name="icon-name">text-editor-symbolic</property>
                     <property name="pixel-size">128</property>
-                    <property name="margin-bottom">16</property>
+                    <property name="margin-start">24</property>
+                    <property name="margin-bottom">24</property>
                     <style>
                       <class name="dim-label"/>
                     </style>
