sidebar: keep sidebar in sync with open button
Later on we'll want this animated, but this is a good start to keep things
in sync when activating a row.

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -112,7 +112,7 @@
         <property name="position">250</property>
         <child>
           <object class="EditorSidebar" id="sidebar">
-            <property name="visible">false</property>
+            <property name="visible" bind-source="open_toggle_button" bind-property="active" bind-flags="bidirectional">false</property>
           </object>
         </child>
         <child>
