tab: implement close and close-other-tabs menu items

--- a/src/editor-tab.ui
+++ b/src/editor-tab.ui
@@ -31,7 +31,7 @@
         </child>
         <child type="end">
           <object class="GtkButton" id="close_button">
-            <property name="action-name">page.close</property>
+            <property name="action-name">tab.close</property>
             <property name="icon-name">window-close-symbolic</property>
             <property name="margin-start">6</property>
             <property name="halign">end</property>
