window: add ctrl+shift+n to take page to new window
This is like ctrl+n for a new window, but takes the current document
with you to that window.

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -162,6 +162,7 @@
       <item>
         <attribute name="label" translatable="yes">Move to New Window</attribute>
         <attribute name="action">tab.move-to-new-window</attribute>
+        <attribute name="accel">&lt;control&gt;&lt;shift&gt;n</attribute>
       </item>
     </section>
     <section>
