--- a/src/editor-tab.ui
+++ b/src/editor-tab.ui
@@ -16,6 +16,14 @@
               <object class="GtkLabel" id="empty"/>
             </child>
             <child>
+              <object class="GtkSpinner" id="spinner">
+                <property name="halign">center</property>
+                <property name="valign">center</property>
+                <property name="height-request">16</property>
+                <property name="width-request">16</property>
+              </object>
+            </child>
+            <child>
               <object class="GtkLabel" id="is_modified">
                 <property name="label">•</property>
               </object>
