--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -57,3 +57,20 @@ notebook:focus:backdrop {
 .org-gnome-TextEditor sidebar list row:last-child {
   border-bottom: 1px solid transparent;
 }
+
+
+/* EditorSearchBar */
+
+.org-gnome-TextEditor page searchbar {
+  background-image: linear-gradient(shade(@theme_bg_color,1.05), @theme_bg_color);
+  padding: 6px;
+  border-style: solid;
+  border-color: @borders;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-bottom-width: 1px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  box-shadow: 0px 0 4px @wm_shadow;
+  margin: 0 10px 20px 10px;
+}
