search: wire up search keybindings and actions

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -16,7 +16,7 @@
             <property name="transition-type">slide-down</property>
             <property name="reveal-child">false</property>
             <child>
-              <object class="EditorSearchBar">
+              <object class="EditorSearchBar" id="search_bar">
                 <property name="can-focus">false</property>
               </object>
             </child>
