search: wire up some basic widgets and state management

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -74,3 +74,7 @@ notebook:focus:backdrop {
   box-shadow: 0px 0 4px @wm_shadow;
   margin: 0 10px 20px 10px;
 }
+.org-gnome-TextEditor page searchbar button.flat.circular {
+  margin: 0;
+  padding: 0;
+}
