--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -71,8 +71,11 @@ notebook:focus:backdrop {
   border-bottom-width: 1px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  box-shadow: 0px 0 4px @wm_shadow;
+  box-shadow: 0 0 3px @wm_shadow;
   margin: 0 10px 20px 10px;
+}
+.org-gnome-TextEditor page searchbar:backdrop {
+  box-shadow: none;
 }
 .org-gnome-TextEditor page searchbar button.flat.circular {
   margin: 0;
