--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -13,6 +13,7 @@
             <property name="hexpand">false</property>
             <property name="valign">start</property>
             <property name="vexpand">false</property>
+            <property name="transition-duration">300</property>
             <property name="transition-type">slide-down</property>
             <property name="reveal-child">false</property>
             <signal name="notify::child-revealed" handler="editor_page_notify_child_revealed_cb" swapped="true" object="EditorPage"/>
