--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -13,6 +13,7 @@
             <property name="primary-icon-name">edit-find-symbolic</property>
             <property name="max-width-chars">20</property>
             <property name="hexpand">true</property>
+            <signal name="activate" handler="editor_search_bar_search_activate_cb" swapped="true" object="EditorSearchBar"/>
             <layout>
               <property name="top-attach">0</property>
               <property name="left-attach">0</property>
@@ -41,13 +42,13 @@
             </style>
             <child>
               <object class="GtkButton">
-                <property name="action-name">search.previous</property>
+                <property name="action-name">search.move-previous</property>
                 <property name="icon-name">go-up-symbolic</property>
               </object>
             </child>
             <child>
               <object class="GtkButton">
-                <property name="action-name">search.next</property>
+                <property name="action-name">search.move-next</property>
                 <property name="icon-name">go-down-symbolic</property>
               </object>
             </child>
