--- a/src/menus.ui
+++ b/src/menus.ui
@@ -11,7 +11,7 @@
     <section>
       <item>
         <attribute name="label" translatable="yes">_Find/Replace…</attribute>
-        <attribute name="action">app.find-replace</attribute>
+        <attribute name="action">page.begin-replace</attribute>
         <attribute name="accel">&lt;primary&gt;f</attribute>
       </item>
     </section>
