sidebar: add "Recent Documents" heading

--- a/src/editor-sidebar.ui
+++ b/src/editor-sidebar.ui
@@ -40,6 +40,19 @@
               </object>
             </child>
             <child>
+              <object class="GtkLabel">
+                <property name="label" translatable="yes">Recent Documents</property>
+                <property name="margin-start">6</property>
+                <property name="margin-top">9</property>
+                <property name="margin-bottom">6</property>
+                <property name="margin-end">6</property>
+                <property name="halign">start</property>
+                <style>
+                  <class name="heading"/>
+                </style>
+              </object>
+            </child>
+            <child>
               <object class="GtkSeparator">
                 <property name="orientation">horizontal</property>
               </object>
