menus: disable upload option
Until we have a plan for implementing this, we can just disable it.

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -130,11 +130,11 @@
         <attribute name="action">page.copy-all</attribute>
         <attribute name="accel">&lt;primary&gt;&lt;shift&gt;c</attribute>
       </item>
-      <item>
+      <!--item>
         <attribute name="id">upload-pastebin</attribute>
         <attribute name="label" translatable="yes">_Upload to Pastebin…</attribute>
         <attribute name="action">page.upload-pastebin</attribute>
-      </item>
+      </item-->
     </section>
     <section>
       <item>
